# stable-diffusion-webui

./: .dockerignore  .env.example  .eslintignore  .eslintrc.js  .eslintrc.json  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitignore copy  .gitmodules  .jshintrc  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .pylintrc  .python-version  .tool-versions  0.11.0  01  2.29.0  250s.yaml  4.8.0  =2.7.0  =4.8.0  API.md  Aidesignvn Webui  A用户协议.txt  B使用教程+常见问题.txt  CHANGELOG.md  CHANGELOG_JP.md  CITATION.cff  CLSA.py  CODEOWNERS  Change-UI-Defaults.md  Change-model-folder-location.md  Command-Line-Arguments-and-Settings.md  Containers.md  Contributing.md  Custom-Images-Filename-Name-and-Subdirectory.md  Custom-Scripts-from-Users.md  (+254 more)
.cleanthat/: cleanthat.yaml  spotless.yaml
.github/: FUNDING.yml  pull_request_template.md  sync.yml
Deploy/: Dockerfile
ESRGAN/: readme.md
EXAMPLES/: README.md  chatGPT prompt template.txt
LICENSES/: README.md  esrgan_victorca25_iNNfer.md
aesthetic_embeddings/: aivazovsky.pt  cloudcore.pt  gloomcore.pt  glowwave.pt  laion_7plus.pt  sac_8plus.pt
cli/: .pylintrc  README.md  bench.py  create-previews.py  detect.py  download.py  extract-lora.py  gen-styles.py  generate.json  generate.py  grid.py  hf-convert.py  hf-search.py  hfsearch.py  ideas.py  idle.py  image-exif.py  image-grid.py  image-interrogate.py  image-palette.py  image-watermark.py  install-sf.py  interrogate.py  latents.py  lcm-convert.py  lcm_convert.py  losschart.py  model-jit.py  model-metadata.py  models.py  nvidia-smi.py  nvml.py  options.py  palette.py  process.py  prompt-ideas.py  prompt-promptist.py  random.json  requirements.txt  run-benchmark.py  (+18 more)
config-proxy/: domain.example.com
config_states/: 2023_09_25-03_31_40_Backup (pre-update).json  2023_12_06-02_32_45_Backup (pre-update).json  2024_03_18-18_29_44_Backup (pre-update).json  2024_03_29-20_10_18_CONFIG.json  2024_04_02-21_08_21_Backup (pre-update).json  2024_06_26-06_37_26_Backup (pre-update).json  2024_06_26-22_19_45_STABLE.json
configs/: alt-diffusion-inference.yaml  alt-diffusion-m18-inference.yaml  flux1-inference.yaml  instruct-pix2pix.yaml  sd-extra.yaml  sd3-inference.yaml  sd_xl_base.yaml  sd_xl_inpaint.yaml  sd_xl_refiner.yaml  sd_xl_v.yaml  v1-inference.yaml  v1-inpainting-inference.yaml  v2-1-stable-unclip-h-inference.yaml  v2-1-stable-unclip-l-inference.yaml  v2-inference-512-base.yaml  v2-inference-768-v.yaml  v2-inpaint.yaml  v2-midas-inference.yaml
data/: config.json  enhancing.sh  linking.sh
docker/: .env  .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  entrypoint.sh  run.sh
dockerbase/: Dockerfile
embeddings/: EasyNegative.safetensors  Place Textual Inversion embeddings here.txt  bad-artist-anime.pt  bad-artist.pt  bad-hands-5.pt  bad_prompt_version2.pt  negHand.pt  ng_deepnegative_v1_75t.pt  ulzzang-6500.pt
examples/: width=1024.jfif  width=864.jfif  width=896.jfif  width=8961.jfif
extensions/: Untitled-1.json  update-all.bat  update-all.sh
extensions/sd-webui-controlnet/annotator/zoe/zoedepth/models/base_models/midas_repo/ros/midas_cpp/: CMakeLists.txt  package.xml
extensions/sd-webui-controlnet/annotator/zoe/zoedepth/models/base_models/midas_repo/ros/midas_cpp/launch/: midas_cpp.launch  midas_talker_listener.launch
extensions/sd-webui-controlnet/annotator/zoe/zoedepth/models/base_models/midas_repo/ros/midas_cpp/scripts/: listener.py  listener_original.py  talker.py
extensions/sd-webui-controlnet/annotator/zoe/zoedepth/models/base_models/midas_repo/ros/midas_cpp/src/: main.cpp
extra/: fileStorage.py  loadYamlFile.py
extra-notebooks/: StableDiffusionUI_Voldemort_V1_2 - Paperspace.ipynb
filestorage/: __init__.py  obs.py  oss.py  storage.py
fonts/: source-sans-pro.css
frontend/: css_and_js.py  frontend.py  ui_functions.py
gradio/: __init__.py  analytics.py  blocks.py  cli.py  components.py  context.py  data_classes.py  deploy_space.py  deploy_space_action.yaml  deprecation.py  documentation.py  encryptor.py  events.py  exceptions.py  external.py  external_utils.py  flagging.py  helpers.py  inputs.py  interface.py  interpretation.py  ipython_ext.py  launches.json  layouts.py  mix.py  networking.py  outputs.py  pipelines.py  processing_utils.py  queueing.py  ranged_response.py  reload.py  routes.py  routes_bak.py  serializing.py  strings.py  templates.py  tunneling.py  utils.py  version.txt
gradio_client/: __init__.py  client.py  data_classes.py  documentation.py  media_data.py  serializing.py  types.json  utils.py  version.txt
handlers/: __init__.py  clothrepair.py  controlnet.py  digital.py  dumper.py  extra.py  formatter.py  gen_fusion_img.py  img2img.py  modelcheck.py  onepress.py  refiner.py  select_scripts.py  tagger.py  txt2img.py  typex.py  utils.py  vediorendition.py
helpers/: commands.py  git.py
html/: art-styles.json  extra-networks-btn-chevron.html  extra-networks-btn-copy-path.html  extra-networks-btn-dirs-view-item.html  extra-networks-btn-edit-metadata.html  extra-networks-btn-show-metadata.html  extra-networks-card-advanced.html  extra-networks-card-long.html  extra-networks-card-minimal.html  extra-networks-card-short.html  extra-networks-card.html  extra-networks-copy-path-button.html  extra-networks-dirs-view-button.html  extra-networks-edit-item-button.html  extra-networks-metadata-button.html  extra-networks-model-details.html  extra-networks-no-cards.html  extra-networks-pane-dirs.html  extra-networks-pane-tree.html  extra-networks-pane.html  extra-networks-tree-button.html  extra-networks-tree-directory.html  extra-networks-tree-row.html  extra-networks-tree.html  footer.html  footer_no_links.html  licenses.html  locale_en.json  locale_ko.json  notice.html  reference.json  spotlight.css  upscalers.json
installer/: How to create the installers.md  install.bat  install.sh
javascript/: .eslintrc.json  ComponentControllers.js  amethyst-nightfall.css  aspectRatioOverlay.js  aspectRatioSliders.js  badScaleChecker.js  base.css  black-orange.css  black-teal.css  clusterize.js  clusterize.min.js  control.js  (+72 more)
(+4801 files in other folders)
